force-app/main/default/objects/Task_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appraiser_Feedback__c</fullName>
        <label>Appraiser Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appraiser_Rating__c</fullName>
        <label>Appraiser Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraiser_Weightage_for_Each_KPIs__c</fullName>
        <label>Appraiser Weightage for Each KPIs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee-Obsolete</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Task tracker</relationshipLabel>
        <relationshipName>Task_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Allocation_for_the_time_perdiod__c</fullName>
        <label>Average % Allocation for time perdiod</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Band B</fullName>
                </value>
                <value>
                    <fullName>Band C</fullName>
                </value>
                <value>
                    <fullName>Band E</fullName>
                </value>
                <value>
                    <fullName>Band M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <label>Challenges</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASSOCIATE CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATE DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATE MANAGER</fullName>
                </value>
                <value>
                    <fullName>AVP(ASSOCIATE VICE PRESIDENT)</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR - HUMAN RESOURCES</fullName>
                </value>
                <value>
                    <fullName>EXECUTIVE</fullName>
                </value>
                <value>
                    <fullName>EXECUTIVE VP</fullName>
                </value>
                <value>
                    <fullName>GROUP PROJECT MANAGER</fullName>
                </value>
                <value>
                    <fullName>GROUP QA MANAGER</fullName>
                </value>
                <value>
                    <fullName>INDUSTRY PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>LEAD CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>MANAGEMENT TRAINEE</fullName>
                </value>
                <value>
                    <fullName>MANAGER</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL TECHNOLOGY ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>PROJECT MANAGER</fullName>
                </value>
                <value>
                    <fullName>QA LEAD</fullName>
                </value>
                <value>
                    <fullName>QA MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>SENIOR DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>SENIOR EXECUTIVE</fullName>
                </value>
                <value>
                    <fullName>SENIOR INDUSTRY PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>SENIOR LEAD CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>SENIOR MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR PROJECT MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR QA LEAD</fullName>
                </value>
                <value>
                    <fullName>SENIOR QA MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR QUALITY ANALYST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Master</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Task tracker (Employee Master)</relationshipLabel>
        <relationshipName>Task_tracker2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Task tracker</relationshipLabel>
        <relationshipName>Task_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Time_For_Completion_in_Hrs__c</fullName>
        <label>Est Time For Completion in Hrs:</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation</label>
        <referenceTo>Evaluation__c</referenceTo>
        <relationshipLabel>Task tracker</relationshipLabel>
        <relationshipName>Task_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPICategory__c</fullName>
        <label>KPI Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Organizational</fullName>
                </value>
                <value>
                    <fullName>Stretch</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPI_Name__c</fullName>
        <label>KPI Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KpiProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KpiProvider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Task tracker (KpiProvider)</relationshipLabel>
        <relationshipName>Task_tracker3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KpiStatus__c</fullName>
        <label>KpiStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KPI Transferred</fullName>
                </value>
                <value>
                    <fullName>KPI Handed Over</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterKPIId__c</fullName>
        <label>MasterKPIId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxWeightage__c</fullName>
        <label>Max Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Measurement_Criteria_Description__c</fullName>
        <label>Measurement Criteria Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MinWeightage__c</fullName>
        <label>Min Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Objectives_And_Key_Results__c</fullName>
        <label>Objectives And Key Results</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PU_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PU Name</label>
        <referenceTo>PU_DU__c</referenceTo>
        <relationshipLabel>Task tracker</relationshipLabel>
        <relationshipName>Task_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Task tracker (Project Manager)</relationshipLabel>
        <relationshipName>Task_tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Task tracker</relationshipLabel>
        <relationshipName>Task_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirement_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Requirement Number</label>
        <referenceTo>Requirements__c</referenceTo>
        <relationshipLabel>Task tracker</relationshipLabel>
        <relationshipName>Task_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SelfRating__c</fullName>
        <label>Self Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Testing In Progress</fullName>
                </value>
                <value>
                    <fullName>Testing completed</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>33000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_level_Allocation__c</fullName>
        <formula>Est_Time_For_Completion_in_Hrs__c /((CASE(MOD( Start_Date__c - DATE(1985,6,24),7),

0 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( End_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( End_Date__c - Start_Date__c )/7)*5)) *8)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task level Allocation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <label>Weightage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Task Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Number__c</columns>
        <columns>Task_Description__c</columns>
        <columns>Employee_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Est_Time_For_Completion_in_Hrs__c</columns>
        <columns>Actual_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQ-{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task tracker</pluralLabel>
    <recordTypes>
        <fullName>AppraiseeTasks</fullName>
        <active>true</active>
        <label>Appraisee Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>KPI</fullName>
        <active>true</active>
        <label>KPI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>